# axolotlsLikePicklesRaytracing

./: CMakeLists.txt  README.md  run.sh
src/: camera.cpp  camera.h  colors.h  cube.cpp  cube.h  main.cpp  materials.cpp  materials.h  object.h  point.h  raycaster.h  resourceManager.h  skybox.cpp  skybox.h  sphere.cpp  sphere.h
